--- a/ответы.md
+++ b/ответы.md
@@ -158,12 +158,8 @@ end for
 ### 1.5.5. Другие виды замыкания
 Симметричное замыкание отношения \( R \) добавляет к \( R \) все пары \( (b, a) \), если \( (a, b) \in R \).
 
-
-
-
-
-----------------------------------------------------------------------------------------------
-
+---
+### 5. Представление множеств в программах списками и итераторами
 
 ### 1.3.5 Представление множеств списками
 
@@ -183,7 +179,7 @@ end for
    - Для нахождения пересечения необходимо пройти по каждому элементу первого списка и проверять его наличие во втором списке.
    - Сложность: O(n * m), где n и m — размеры множеств.
 
-4. **Разность (−):**
+4. **Разность (\\):**
    - Для нахождения разности множества нужно пройти по элементам первого списка и исключить те, которые присутствуют во втором списке.
    - Сложность: O(n * m).
 
@@ -250,7 +246,10 @@ end for
 Эти объяснения базируются на содержимом файла "теория.pdf".
 
 
------------------------------------------------------------------------------------------------------------------------------
+---
+
+### 8. Замыкание и сокращение отношений, алгоритм Уоршалла, диаграмма Хассе
+
 ### 1.5.1 Транзитивное и рефлексивное замыкание
 
 **Транзитивное замыкание:**  
