--- a/ответы.md
+++ b/ответы.md
@@ -1,20 +1,20 @@
 ### 1 Множества, их задание, мультимножества и последовательности, парадокс Рассела
 
 #### 1.1.1 Элементы и множества
-Множество — это определённая совокупность объектов, называемых элементами множества. Элементы множества различны и отличимы друг от друга. Примером множества может быть множество натуральных чисел \( N \) или множество простых чисел \( P \). Отношение принадлежности элемента \( x \) множеству \( M \) записывается как \( x \in M \), а если элемент не принадлежит множеству — \( x \notin M \). Пустое множество обозначается \( \emptyset \).
+Множество — это определённая совокупность объектов, называемых элементами множества. Элементы множества различны и отличимы друг от друга. Примером множества может быть множество натуральных чисел \( N \) или множество простых чисел \( P \). Отношение принадлежности элемента \( x \) множеству \( M \) записывается как \( x \in M \), а если элемент не принадлежит множеству — \( x $\notin$ M \). Пустое множество обозначается \( \emptyset \).
 
 #### 1.1.2 Задание множеств
 Множество может быть задано различными способами:
-- Перечислением элементов: \(\{a_1, a_2, \ldots, a_n\}\).
-- Характеристическим предикатом: \(\{x \mid P(x)\}\), где \( P(x) \) — свойство, которое выполняется для элементов множества.
-- Порождающей процедурой: \(\{x \mid \ldots \text{yield} x\}\).
-- Диапазоном целых чисел: \( m..n \).
+- Перечислением элементов: \(\{$a_1, a_2, \ldots, a_n$\}\).
+- Характеристическим предикатом: \(\{$x \mid P(x)$\}\), где \( P(x) \) — свойство, которое выполняется для элементов множества.
+- Порождающей процедурой: \(\{$ x \mid \ldots \text{yield} x $\}\).
+- Диапазоном целых чисел: \( $m..n$ \).
 
 #### 1.1.3 Парадокс Рассела
 Парадокс Рассела заключается в рассмотрении множества всех множеств, которые не содержат сами себя. Если такое множество существует, то оно одновременно должно и не должно содержать себя, что приводит к логическому противоречию. Это противоречие показывает необходимость более строгих оснований теории множеств, таких как аксиома регулярности, которая запрещает такие парадоксы.
 
 #### 1.1.4 Мультимножества
-Мультимножество отличается от обычного множества тем, что в нём элементы могут повторяться. Оно представляется в виде \( \hat{X} = [x_1^{a_1}, \ldots, x_n^{a_n}] \), где \( a_i \) обозначает количество повторений элемента \( x_i \). Носитель мультимножества — это множество всех его различных элементов, а показатель — это функция, показывающая число вхождений каждого элемента.
+Мультимножество отличается от обычного множества тем, что в нём элементы могут повторяться. Оно представляется в виде \($ \hat{X} = [x_1^{a_1}, \ldots, x_n^{a_n}]$ \), где \( $a_i$ \) обозначает количество повторений элемента \( $x_i $\). Носитель мультимножества — это множество всех его различных элементов, а показатель — это функция, показывающая число вхождений каждого элемента.
 
 #### 1.1.5 Конечные последовательности
 Конечная последовательность — это упорядоченный набор элементов, также называемый словом. Элементы последовательности берутся из алфавита, а сама последовательность называется языком. Основные операции над последовательностями включают конкатенацию, префиксы и постфиксы.
@@ -22,10 +22,10 @@
 ### 2 Конечные и бесконечные множества, теорема Кантора-Бернштейна, парадокс Кантора
 
 #### 1.2.2 Равномощные множества
-Два множества \( A \) и \( B \) называются равномощными, если между ними можно установить взаимно-однозначное соответствие. Это обозначается как \( |A| = |B| \). Равномощность обладает свойствами рефлексивности, симметричности и транзитивности.
+Два множества \( A \) и \( B \) называются равномощными, если между ними можно установить взаимно-однозначное соответствие. Это обозначается как \( $|A| = |B|$ \). Равномощность обладает свойствами рефлексивности, симметричности и транзитивности.
 
 #### 1.2.3 Конечные и бесконечные множества
-Множество называется конечным, если у него нет равномощного собственного подмножества. В противном случае, множество называется бесконечным. Для конечного множества \( A \) используется запись \( |A| < \infty \), а для бесконечного — \( |A| = \infty \).
+Множество называется конечным, если у него нет равномощного собственного подмножества. В противном случае, множество называется бесконечным. Для конечного множества \( A \) используется запись \( |A| < $\infty$ \), а для бесконечного — \( |A| = $\infty$ \).
 
 #### 1.2.4 Счётные и несчётные множества
 Множество называется счётным, если его элементы можно пронумеровать натуральными числами. Несчётные множества не могут быть пронумерованы таким образом. Примером счётного множества является множество рациональных чисел, а несчётного — множество вещественных чисел.
@@ -34,10 +34,10 @@
 Мощность конечного множества \( A \) — это количество его элементов, обозначаемое \( |A| \). Принцип Дирихле утверждает, что если более чем \( n \) объектов распределены по \( n \) ящикам, то хотя бы один ящик содержит более одного объекта.
 
 #### 1.2.7 Разбиения и покрытия
-Разбиением множества называется семейство его подмножеств, попарно непересекающихся и объединение которых составляет всё множество. Покрытие множества — это семейство его подмножеств, объединение которых включает всё множество. Теорема Кантора-Бернштейна утверждает, что если множества \( A \) и \( B \) таковы, что \( |A| \leq |B| \) и \( |B| \leq |A| \), то \( |A| = |B| \).
+Разбиением множества называется семейство его подмножеств, попарно непересекающихся и объединение которых составляет всё множество. Покрытие множества — это семейство его подмножеств, объединение которых включает всё множество. Теорема Кантора-Бернштейна утверждает, что если множества \( A \) и \( B \) таковы, что \( $|A| \leq |B|$ \) и \( $|B| \leq |A|$ \), то \( |A| = |B| \).
 
 #### 1.2.8 Булеан
-Булеан множества \( A \) — это множество всех подмножеств \( A \), обозначаемое как \( 2^A \). Теорема Кантора утверждает, что булеан любого множества \( A \) имеет строго большую мощность, чем само множество \( A \), то есть \( |A| < |2^A| \).
+Булеан множества \( A \) — это множество всех подмножеств \( A \), обозначаемое как \( $2^A$ \). Теорема Кантора утверждает, что булеан любого множества \( A \) имеет строго большую мощность, чем само множество \( A \), то есть \( $|A| < |2^A|$ \).
 
 ### 3 Операции с множествами, алгебра подмножеств
 
@@ -46,18 +46,18 @@
 
 #### 1.2.6 Операции над множествами
 Основные операции над множествами включают:
-- Объединение (\( A \cup B \)) — множество, содержащее все элементы из \( A \) и \( B \).
-- Пересечение (\( A \cap B \)) — множество, содержащее элементы, общие для \( A \) и \( B \).
-- Разность (\( A \setminus B \)) — множество, содержащее элементы \( A \), не принадлежащие \( B \).
-- Симметрическая разность (\( A \Delta B \)) — множество, содержащее элементы, принадлежащие либо \( A \), либо \( B \), но не обоим одновременно.
+- Объединение (\( A $\cup$ B \)) — множество, содержащее все элементы из \( A \) и \( B \).
+- Пересечение (\( A $\cap$ B \)) — множество, содержащее элементы, общие для \( A \) и \( B \).
+- Разность (\( A $\setminus$ B \)) — множество, содержащее элементы \( A \), не принадлежащие \( B \).
+- Симметрическая разность (\( A $\Delta$ B \)) — множество, содержащее элементы, принадлежащие либо \( A \), либо \( B \), но не обоим одновременно.
 
 #### 1.2.9 Свойства операций над множествами
 Операции над множествами обладают следующими свойствами:
-- Идемпотентность: \( A \cup A = A \) и \( A \cap A = A \).
-- Коммутативность: \( A \cup B = B \cup A \) и \( A \cap B = B \cap A \).
-- Ассоциативность: \( (A \cup B) \cup C = A \cup (B \cup C) \) и \( (A \cap B) \cap C = A \cap (B \cap C) \).
-- Дистрибутивность: \( A \cup (B \cap C) = (A \cup B) \cap (A \cup C) \) и \( A \cap (B \cup C) = (A \cap B) \cup (A \cap C) \).
-- Законы де Моргана: \( \overline{A \cup B} = \overline{A} \cap \overline{B} \) и \( \overline{A \cap B} = \overline{A} \cup \overline{B} \).
+- Идемпотентность: \( A $\cup$ A = A \) и \( A $\cap$ A = A \).
+- Коммутативность: \( A $\cup$ B = B $\cup$ A \) и \( A $\cap$ B = B $\cap$ A \).
+- Ассоциативность: \( (A $\cup$ B) $\cup$ C = A $\cup$ (B $\cup$ C) \) и \( (A $\cap$ B) $\cap$ C = A $\cap$ (B $\cap$ C) \).
+- Дистрибутивность: \( A $\cup$ (B $\cap$ C) = (A $\cup$ B) $\cap$ (A $\cup$ C) \) и \( A $\cap$ (B $\cup$ C) = (A $\cap$ B) $\cup$ (A $\cap$ C) \).
+- Законы де Моргана: \( $\overline{A \cup B} = \overline{A} \cap \overline{B} $\) и \( $\overline{A \cap B} = \overline{A} \cup \overline{B}$ \).
 
 ### 4 Представление множеств в программах битовыми шкалами, код Грея
 
@@ -109,42 +109,42 @@ end for
 ### 6. Отношения и их свойства
 
 #### 1.4.1. Бинарные отношения
-Бинарное отношение \( R \) на множестве \( A \) - это подмножество декартова произведения \( A \times A \). Это означает, что \( R \subseteq A \times A \). Элементы \( (a, b) \in R \) называются парами, где \( a \) находится в отношении с \( b \).
+Бинарное отношение \( R \) на множестве \( A \) - это подмножество декартова произведения \( A \times A \). Это означает, что \($ R \subseteq A \times A$ \). Элементы \($ (a, b) \in R $\) называются парами, где \( a \) находится в отношении с \( b \).
 
 #### 1.4.2. Свойства бинарных отношений
 Основные свойства бинарных отношений включают рефлексивность, симметричность и транзитивность:
-- **Рефлексивность**: \( \forall a \in A, (a, a) \in R \).
-- **Симметричность**: \( \forall a, b \in A, если (a, b) \in R, то (b, a) \in R \).
-- **Транзитивность**: \( \forall a, b, c \in A, если (a, b) \in R и (b, c) \in R, то (a, c) \in R \).
+- **Рефлексивность**: \( $\forall a \in A, (a, a) \in R $\).
+- **Симметричность**: \( $\forall a, b \in A, если (a, b) \in R, то (b, a) \in R $\).
+- **Транзитивность**: \( $\forall a, b, c \in A, если (a, b) \in R и (b, c) \in R, то (a, c) \in R $\).
 
 #### 1.4.4. Отношение эквивалентности
 Отношение эквивалентности на множестве \( A \) - это бинарное отношение, которое является рефлексивным, симметричным и транзитивным. Отношение эквивалентности делит множество \( A \) на непересекающиеся классы эквивалентности.
 
 #### 1.4.5. Отношение порядка
 Отношение порядка - это бинарное отношение, которое является транзитивным и антисимметричным:
-- **Антисимметричность**: \( \forall a, b \in A, если (a, b) \in R и (b, a) \in R, то a = b \).
+- **Антисимметричность**: \($ \forall a, b \in A, если (a, b) \in R и (b, a) \in R, то a = b $\).
 Отношение порядка может быть строгим или нестрогим (частичный порядок).
 
 #### 1.4.6. Другие свойства отношений
 Другие свойства отношений включают асимметричность и плотность:
-- **Асимметричность**: \( \forall a, b \in A, если (a, b) \in R, то (b, a) \notin R \).
-- **Плотность**: отношение \( R \) на \( A \) плотное, если \( \forall a, b \in A, если a < b, то существует c, что a < c < b \).
+- **Асимметричность**: \( $\forall a, b \in A, если (a, b) \in R, то (b, a) $\notin$ R $\).
+- **Плотность**: отношение \( R \) на \( A \) плотное, если \( $\forall a, b \in A, если a < b, то существует c, что a < c < b $\).
 
 ### 7. Степень отношения, циклы, ядро отношения
 
 #### 1.4.7. Степень отношения
-Степень отношения \( R \) определяется как число различных элементов, с которыми данный элемент находится в отношении. Формально, степень элемента \( a \) в отношении \( R \) - это количество таких \( b \), что \( (a, b) \in R \).
+Степень отношения \( R \) определяется как число различных элементов, с которыми данный элемент находится в отношении. Формально, степень элемента \( a \) в отношении \( R \) - это количество таких \( b \), что \( $(a, b) \in R$ \).
 
 #### 1.4.8. Циклы отношения
-Цикл в отношении \( R \) на множестве \( A \) - это последовательность элементов \( a_1, a_2, \ldots, a_n \) таких, что \( (a_i, a_{i+1}) \in R \) для всех \( 1 \leq i < n \) и \( (a_n, a_1) \in R \).
+Цикл в отношении \( R \) на множестве \( A \) - это последовательность элементов \($ a_1, a_2, \ldots, a_n $\) таких, что \( $(a_i, a_{i+1}) \in R$ \) для всех \( $1 \leq i < n $\) и \( $(a_n, a_1) \in R $\).
 
 #### 1.4.9. Ядро отношения
-Ядро отношения \( R \) на множестве \( A \) - это подмножество \( K \subseteq A \), такое что \( (a, b) \in R \) для всех \( a, b \in K \).
+Ядро отношения \( R \) на множестве \( A \) - это подмножество \( $K \subseteq A $\), такое что \($ (a, b) \in R $\) для всех \($ a, b \in K $\).
 
 ### 8. Замыкание и сокращение отношений, алгоритм Уоршалла, диаграмма Хассе
 
 #### 1.5.1. Замыкание отношений
-Транзитивное замыкание отношения \( R \) - это минимальное транзитивное отношение \( R^+ \), которое содержит \( R \). Рефлексивно-транзитивное замыкание \( R \) - это минимальное рефлексивно-транзитивное отношение \( R^* \), содержащее \( R \).
+Транзитивное замыкание отношения \( R \) - это минимальное транзитивное отношение \($ R^+ $\), которое содержит \( R \). Рефлексивно-транзитивное замыкание \( R \) - это минимальное рефлексивно-транзитивное отношение \( $R^* $\), содержащее \( R \).
 
 #### 1.5.2. Сокращение отношений
 Транзитивное сокращение отношения \( R \) - это минимальное отношение, которое транзитивно и эквивалентно \( R \) в том смысле, что \( R \) и его сокращение порождают одно и то же транзитивное замыкание.
@@ -156,7 +156,7 @@ end for
 Диаграмма Хассе - это способ графического представления частично упорядоченного множества. В ней элементы множества изображаются как вершины, а порядок как ребра между вершинами, причём ребра направлены снизу вверх. 
 
 ### 1.5.5. Другие виды замыкания
-Симметричное замыкание отношения \( R \) добавляет к \( R \) все пары \( (b, a) \), если \( (a, b) \in R \).
+Симметричное замыкание отношения \( R \) добавляет к \( R \) все пары \( (b, a) \), если \($ (a, b) \in R $\).
 
 ---
 ### 5. Представление множеств в программах списками и итераторами
@@ -243,24 +243,19 @@ end for
 
 ---
 
-Эти объяснения базируются на содержимом файла "теория.pdf".
-
-
----
-
 ### 8. Замыкание и сокращение отношений, алгоритм Уоршалла, диаграмма Хассе
 
 ### 1.5.1 Транзитивное и рефлексивное замыкание
 
 **Транзитивное замыкание:**  
-Транзитивное замыкание отношения \( R \) на множестве \( M \) — это наименьшее транзитивное надмножество \( R \). Транзитивное замыкание \( R \) обозначается как \( R^+ \).
+Транзитивное замыкание отношения \( R \) на множестве \( M \) — это наименьшее транзитивное надмножество \( R \). Транзитивное замыкание \( R \) обозначается как \( $R^+ $\).
 
 **Рефлексивное замыкание:**  
 Рефлексивное замыкание отношения \( R \) — это наименьшее рефлексивное надмножество \( R \). Рефлексивное замыкание \( R \) обозначается как \( R^* \).
 
 **Определение:**
-- \( R^+ = \bigcup_{i=1}^{\infty} R^i \)
-- \( R^* = \bigcup_{i=0}^{\infty} R^i \)
+- \($ R^+ = \bigcup_{i=1}^{\infty} R^i $\)
+- \($ R^* = \bigcup_{i=0}^{\infty} R^i $\)
 
 **Свойства:**
 - \( R^+ \) — транзитивное замыкание \( R \).
@@ -271,7 +266,7 @@ end for
 **Алгоритм Уоршалла** используется для нахождения транзитивного замыкания ориентированного графа. Он преобразует матрицу смежности графа так, чтобы она отражала транзитивное замыкание.
 
 **Шаги алгоритма:**
-1. Вход: матрица отношения \( R \), размером \( n \times n \).
+1. Вход: матрица отношения \( R \), размером \( $n \times n $\).
 2. Выход: матрица замыкания \( T \).
 3. Инициализация: \( T := R \).
 4. Три вложенных цикла для обновления матрицы:
@@ -301,7 +296,7 @@ end for
 
 **Правила построения:**
 1. Каждому элементу соответствует точка.
-2. Если \( a \leq b \) и нет такого \( c \), что \( a \leq c \leq b \), то проводится ребро от \( a \) к \( b \).
+2. Если \( a \leq b \) и нет такого \( c \), что \( $a \leq c \leq b$ \), то проводится ребро от \( a \) к \( b \).
 3. Ребра ориентированы снизу вверх, чтобы показать направление порядка.
 
 **Пример:**
@@ -316,7 +311,7 @@ end for
 Симметричное сокращение отношения \( R \) — это минимальное подмножество \( R \), которое можно расширить до симметричного замыкания.
 
 **Определение:**
-- \( S = R \cup R^{-1} \), где \( R^{-1} \) — обратное отношение \( R \).
+- \( $S = R \cup R^{-1}$ \), где \( $R^{-1} $\) — обратное отношение \( R \).
 
 **Пример:**
 Если \( R = \{(a, b), (b, c)\} \), то его симметричное замыкание будет \( \{(a, b), (b, a), (b, c), (c, b)\} \).
