--- a/ответы.md
+++ b/ответы.md
@@ -296,7 +296,7 @@ end for
 
 **Правила построения:**
 1. Каждому элементу соответствует точка.
-2. Если \( a \leq b \) и нет такого \( c \), что \( $a \leq c \leq b$ \), то проводится ребро от \( a \) к \( b \).
+2. Если \($ a \leq b$ \) и нет такого \( c \), что \( $a \leq c \leq b$ \), то проводится ребро от \( a \) к \( b \).
 3. Ребра ориентированы снизу вверх, чтобы показать направление порядка.
 
 **Пример:**
